testdata/baselines/reference/submodule/compiler/conditionalReturnExpression.errors.txt
conditionalReturnExpression.ts(2,5): error TS2322: Type '1 | 2' is not assignable to type '3'.
  Type '1' is not assignable to type '3'.


==== conditionalReturnExpression.ts (1 errors) ====
    function return1(x: boolean): 3 {
        return (x ? (1) : 2);
        ~~~~~~
!!! error TS2322: Type '1 | 2' is not assignable to type '3'.
!!! error TS2322:   Type '1' is not assignable to type '3'.
    }
    
    declare function getAny(): any;
    
    function return2(x: string): string {
        return x.startsWith("a") ? getAny() : 1;
    }
    
    function return3(x: string): string {
        return x.startsWith("a") ? "a" : x;
    }
    
    function return4(x: string): string {
        return (x.startsWith("a") ? getAny() : 1) as string;
    }
    
    const return5 = (x: string): string => x.startsWith("a") ? getAny() : 1;
    
    const return6 = (x: string): string => (x.startsWith("a") ? getAny() : 1) as string;